Bug 720444 - Add amount of free physical memory and free space in the page file to Windows crash reports. r=ted